# researcher-zero

./: .env.example  .gitignore  AGENTS.md  main.py  pyproject.toml
core/: __init__.py
core/agents/: __init__.py
core/agents/paper_searcher/: __init__.py  configuration.py  paper_searcher.py  prompts.py  state.py
core/memory/: __init__.py  graph_memory.py  scratch.md
core/researcher_zero/: __init__.py
core/researcher_zero/init/: scaffold.py
core/researcher_zero/learn/: __init__.py  configuration.py  context_loader.py  design.md  graph.py  plan.py  prompts.py  react.py  state.py  summarize.py
core/services/: __init__.py
core/services/init/: __init__.py
core/services/learn/: __init__.py  configuration.py  context_loader.py  design.md  graph.py  plan.py  prompts.py  react.py  state.py  summarize.py
core/skills/: __init__.py
core/skills/file_manage/: SKILL.md
core/skills/file_manage/scripts/: create.py  edit_blocks.py  editor.py  errors.py  file_manage_tool.py  listing.py  service.py  workspace.py
core/skills/plan/: README.md  SKILL.md  __init__.py  service.py
core/skills/plan/scripts/: __init__.py  plan_tool.py
core/skills/read/: SKILL.md
core/skills/search/: README.md  SKILL.md
core/tools/search/: arxiv_search.py  openalex_search.py  semantic_scholar_search.py
core/tools/skill_meta_toolkit/: README.md  __init__.py  service.py  toolkit.py
core/utils/: __init__.py  logs.py
examples/service/: run_learn_flow_check.py
examples/skills/: run_plan.py  run_read.py  run_search.py
examples/tools/: run_file_manage.py  run_skill_meta_toolkit.py
(+6 files in other folders)
